--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		<div class="navbar-wrapper navbar-light bg-light" role="navigation">
 			<div class="container">
 				<button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-backyard"> <span class="sr-only">Toggle navigation</span>
-&#x2630;</button> <a class="navbar-brand site-name" href="#top"><img src="images/logo2.png" alt="logo"></a>
+&#x2630;</button> <a class="navbar-brand site-name" href="#top"><img src="images/logo.png" alt="logo"></a>
 				<div id="navbar-scroll" class="collapse navbar-collapse navbar-backyard ml-auto">
 					<ul class="nav navbar-nav">
 						<li><a href="#intro" class="nav-link">About</a>
