--- a/subscribe.html
+++ b/subscribe.html
@@ -4,7 +4,7 @@
 <head>
 
 	<!-- /.website title -->
-	<title>Backyard Landing Page</title>
+	<title>Nadyne Designs</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<!-- CSS Files -->
@@ -35,7 +35,7 @@
 	<div id="top"></div>
 
 	<!-- /.parallax full screen background image -->
-	<div class="fullscreen landing parallax" style="background-image:url('images/bg.jpg');" data-img-width="2000" data-img-height="1333" data-diff="100">
+	<div class="fullscreen landing parallax" style="background-image:url('images/0e098ab8d90a7e99_Modern_Cur.jpg');" data-img-width="2000" data-img-height="1333" data-diff="100">
 
 
 
@@ -50,12 +50,12 @@
 
 						<!-- /.main title -->
 						<h1 class="wow fadeInLeft">
-							High Converting Landing Page
+							Designing 
 						</h1>
 
 						<!-- /.header paragraph -->
 						<div class="landing-text wow fadeInLeft">
-							<p>Backyard is a modern and customizable landing page template designed to increase conversion of your product. Backyard is flexible to suit any kind of your business. Try now and join with our happy customers!</p>
+							<p>Nadyne Designs is a modern and customizable landing page template designed to increase conversion of your product. Backyard is flexible to suit any kind of your business. Try now and join with our happy customers!</p>
 						</div>
 
 						<!-- /.subscribe form -->
@@ -82,15 +82,14 @@
 		<div class="navbar-wrapper navbar-light bg-light" role="navigation">
 			<div class="container">
 				<button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-backyard"> <span class="sr-only">Toggle navigation</span>
-&#x2630;</button> <a class="navbar-brand site-name" href="#top"><img src="images/logo2.png" alt="logo"></a>
+&#x2630;</button> <a class="navbar-brand site-name" href="#top"><img src="images/logo.png" alt="logo"></a>
 				<div id="navbar-scroll" class="collapse navbar-collapse navbar-backyard ml-auto">
 					<ul class="nav navbar-nav">
 						<li><a href="#intro" class="nav-link">About</a>
 						</li>
 						<li><a href="#feature" class="nav-link">Features</a>
 						</li>
-						<li><a href="#download" class="nav-link">Download</a>
-						</li>
+						
 						<li><a href="#package" class="nav-link">Pricing</a>
 						</li>
 						<li><a href="#testi" class="nav-link">Reviews</a>
@@ -112,7 +111,7 @@
 
 				<!-- /.intro image -->
 				<div class="col-lg-6 intro-pic wow slideInLeft">
-					<img src="images/intro-image.jpg" alt="image" class="img-fluid">
+					<img src="images/living room 2.jpg" alt="image" class="img-fluid">
 				</div>
 
 				<!-- /.intro content -->
@@ -154,7 +153,7 @@
 
 					<!-- /.feature image -->
 					<div class="feature-img">
-						<img src="images/feature-image.jpg" alt="image" class="img-fluid wow fadeInLeft">
+						<img src="images/db76dba5-fd6d-4e55-ba78-41cb8f221574_1.829309a87bd1fcbd7293f6480ff0af96.jpeg" alt="image" class="img-fluid wow fadeInLeft">
 					</div>
 				</div>
 
@@ -221,7 +220,7 @@
 
 				<!-- /.feature image -->
 				<div class="col-lg-6 feature-2-pic wow fadeInRight">
-					<img src="images/feature2-image.jpg" alt="macbook" class="img-fluid">
+					<img src="images/e82e97bb-e81a-4b62-8ef3-166f5d10edf4_1.cad881b98a7132f09cdf9a56889a3fca.jpeg" alt="macbook" class="img-fluid">
 				</div>
 			</div>
 
@@ -231,7 +230,7 @@
 
 	<!-- /.download section -->
 	<div id="download">
-		<div class="action fullscreen parallax" style="background-image:url('images/bg.jpg');" data-img-width="2000" data-img-height="1333" data-diff="100">
+		<div class="action fullscreen parallax" style="background-image:url('images/0e098ab8d90a7e99_Modern_Cur.jpg');" data-img-width="2000" data-img-height="1333" data-diff="100">
 			<div class="overlay">
 				<div class="container">
 					<div class="row">
@@ -503,7 +502,7 @@
 
 	<!-- /.contact section -->
 	<div id="contact">
-		<div class="contact fullscreen parallax" style="background-image:url('images/bg.jpg');" data-img-width="2000" data-img-height="1334" data-diff="100">
+		<div class="contact fullscreen parallax" style="background-image:url('images/green-curtains-ideas-for-wi.jpg');" data-img-width="2000" data-img-height="1334" data-diff="100">
 			<div class="overlay">
 				<div class="container">
 					<div class="row">
@@ -563,7 +562,7 @@
 							<li><a class="wow fadeInUp" href="https://instagram.com/" data-wow-delay="0.6s"><i class="fa fa-instagram"></i></a></li>
 						</ul>
 					</div>
-					<div class="text-center wow fadeInUp" style="font-size: 14px;">Copyright Backyard 2017 - Template by <a href="https://bootstrapthemes.co" target="_blank">https://bootstrapthemes.co</a></div>
+					<div class="text-center wow fadeInUp" style="font-size: 14px;">Copyright Nadyne Designs 2017 - Template by <a href="azaraab.github.io" target="_blank">azaraab.github.io</a></div>
 					<a href="#" class="scrollToTop"><i class="pe-7s-up-arrow pe-va"></i></a>
 				</div>
 			</div>
