--- a/app.html
+++ b/app.html
@@ -34,7 +34,7 @@
 	<div id="top"></div>
 
 	<!-- /.parallax full screen background image -->
-	<div class="fullscreen landing parallax" style="background-image:url('images/bg.jpg');" data-img-width="2000" data-img-height="1325" data-diff="100">
+	<div class="fullscreen landing parallax" style="background-image:url('images/living 12.jpg');" data-img-width="2000" data-img-height="1325" data-diff="100">
 
 		<div class="overlay">
 			<div class="container">
